// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplyTemplate should render 1`] = `
.emotion-0 {
  width: auto;
  text-align: left;
  background-color: #fff;
}

.emotion-2 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  padding: 10px 10px;
}

.emotion-4 {
  font-size: 14px;
  font-weight: 600;
  color: #303030;
  line-height: 36px;
  white-space: nowrap;
}

.emotion-5 {
  float: left;
  font-size: 14px;
  font-weight: 700;
  width: 100px;
  height: 34px;
}

.emotion-7 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  margin-right: 10px;
}

.emotion-9 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  position: relative;
  width: 250px;
}

.emotion-9 input {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(53,112,244,0.05);
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #303030;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: 36px;
  margin: 0;
  outline: none;
  padding: 0 1rem;
  text-align: left;
  width: 100%;
}

.emotion-9.animated input {
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
}

.emotion-9 input::-webkit-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-9 input::-moz-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-9 input:-ms-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-9 input::placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-9 input.focused,
.emotion-9 input:active,
.emotion-9 input:focus {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #3570f4;
  color: #303030;
}

.emotion-9 input:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-9 .message {
  font-size: 12px;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

.emotion-9.error input,
.emotion-9.error input.focused,
.emotion-9.error input:active,
.emotion-9.error input:focus {
  border-bottom: 2px solid #d01111;
}

.emotion-9.error .message {
  color: #d01111;
}

.emotion-10 {
  width: 230px;
  height: 34px;
  font-size: 14px;
}

<div
  autocomplete="off"
  class="emotion-0 emotion-1"
  data-testid="add-service-form"
>
  <div
    class="emotion-2 emotion-3"
  >
    <label
      class="emotion-4 denali-input-label emotion-5 emotion-6"
      for="service-name"
    />
    <div
      class="emotion-7 emotion-8"
    >
      <div
        class="emotion-9 denali-input animated emotion-10 emotion-11"
        data-testid="input-wrapper"
      >
        <input
          autocomplete="off"
          data-testid="input-node"
          id="0"
          name=""
          placeholder="Enter "
          value=""
        />
        <div
          class="message"
          data-testid="message"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ApplyTemplate should render with keywords 1`] = `
.emotion-0 {
  width: auto;
  text-align: left;
  background-color: #fff;
}

.emotion-2 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  padding: 10px 10px;
}

.emotion-4 {
  font-size: 14px;
  font-weight: 600;
  color: #303030;
  line-height: 36px;
  white-space: nowrap;
}

.emotion-5 {
  float: left;
  font-size: 14px;
  font-weight: 700;
  width: 100px;
  height: 34px;
}

.emotion-7 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  margin-right: 10px;
}

.emotion-9 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  position: relative;
  width: 250px;
}

.emotion-9 input {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(53,112,244,0.05);
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #303030;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: 36px;
  margin: 0;
  outline: none;
  padding: 0 1rem;
  text-align: left;
  width: 100%;
}

.emotion-9.animated input {
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
}

.emotion-9 input::-webkit-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-9 input::-moz-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-9 input:-ms-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-9 input::placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-9 input.focused,
.emotion-9 input:active,
.emotion-9 input:focus {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #3570f4;
  color: #303030;
}

.emotion-9 input:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-9 .message {
  font-size: 12px;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

.emotion-9.error input,
.emotion-9.error input.focused,
.emotion-9.error input:active,
.emotion-9.error input:focus {
  border-bottom: 2px solid #d01111;
}

.emotion-9.error .message {
  color: #d01111;
}

.emotion-10 {
  width: 230px;
  height: 34px;
  font-size: 14px;
}

<div
  autocomplete="off"
  class="emotion-0 emotion-1"
  data-testid="add-service-form"
>
  <div
    class="emotion-2 emotion-3"
  >
    <label
      class="emotion-4 denali-input-label emotion-5 emotion-6"
      for="service-name"
    >
      service
    </label>
    <div
      class="emotion-7 emotion-8"
    >
      <div
        class="emotion-9 denali-input animated emotion-10 emotion-11"
        data-testid="input-wrapper"
      >
        <input
          autocomplete="off"
          data-testid="input-node"
          id="service0"
          name="service"
          placeholder="Enter service"
          value=""
        />
        <div
          class="message"
          data-testid="message"
        />
      </div>
    </div>
  </div>
</div>
`;
